ffi/include/rfe.h

/**
 * Result code returned by fallible `rfe-ffi` functions.
 */
typedef enum Result {
  /**
   * The function completed successfully.
   */
  RESULT_SUCCESS = 0,
  /**
   * The connected device reported unsupported or incompatible firmware.
   */
  RESULT_INCOMPATIBLE_FIRMWARE_ERROR,
  /**
   * An argument was invalid, such as an out-of-range value or undersized buffer.
   */
  RESULT_INVALID_INPUT_ERROR,
  /**
   * The requested operation is not valid for the current device state.
   */
  RESULT_INVALID_OPERATION_ERROR,
  /**
   * A serial port or operating system I/O error occurred.
   */
  RESULT_IO_ERROR,
  /**
   * The requested data has not been received from the device.
   */
  RESULT_NO_DATA,
  /**
   * A required pointer argument was `NULL`.
   */
  RESULT_NULL_PTR_ERROR,
  /**
   * The device did not respond before the operation timed out.
   */
  RESULT_TIMEOUT_ERROR,
} Result;
typedef uint8_t SignalGeneratorModel;
typedef uint8_t Attenuation;
typedef uint8_t PowerLevel;
typedef uint8_t RfPower;
typedef uint8_t Temperature;
/**
 * Monochrome LCD screen capture from an RF Explorer device.
 */
typedef struct ScreenData ScreenData;
/**
 * RF Explorer signal generator device.
 */
typedef struct SignalGenerator SignalGenerator;
/**
 * Signal generator configuration.
 *
 * Frequencies are represented in hertz. Durations are represented in
 * milliseconds.
 */
typedef struct SignalGeneratorConfig {
  /**
   * Start frequency for frequency sweep and tracking modes.
   */
  uint64_t start_hz;
  /**
   * CW frequency.
   */
  uint64_t cw_hz;
  /**
   * Total number of sweep or tracking steps.
   */
  uint32_t total_steps;
  /**
   * Frequency increment per step.
   */
  uint64_t step_hz;
  /**
   * CW and frequency sweep attenuation setting.
   */
  Attenuation attenuation;
  /**
   * CW and frequency sweep power level.
   */
  PowerLevel power_level;
  /**
   * Number of amplitude sweep power steps.
   */
  uint16_t sweep_power_steps;
  /**
   * Amplitude sweep start attenuation setting.
   */
  Attenuation start_attenuation;
  /**
   * Amplitude sweep start power level.
   */
  PowerLevel start_power_level;
  /**
   * Amplitude sweep stop attenuation setting.
   */
  Attenuation stop_attenuation;
  /**
   * Amplitude sweep stop power level.
   */
  PowerLevel stop_power_level;
  /**
   * RF output power state.
   */
  RfPower rf_power;
  /**
   * Delay between sweep steps.
   */
  uint64_t sweep_delay_ms;
} SignalGeneratorConfig;
/**
 * Signal generator amplitude sweep configuration.
 *
 * Frequencies are represented in hertz. Durations are represented in
 * milliseconds.
 */
typedef struct SignalGeneratorConfigAmpSweep {
  /**
   * CW frequency used during the amplitude sweep.
   */
  uint64_t cw_hz;
  /**
   * Number of power steps in the sweep.
   */
  uint16_t sweep_power_steps;
  /**
   * Starting attenuation setting.
   */
  Attenuation start_attenuation;
  /**
   * Starting output power level.
   */
  PowerLevel start_power_level;
  /**
   * Stopping attenuation setting.
   */
  Attenuation stop_attenuation;
  /**
   * Stopping output power level.
   */
  PowerLevel stop_power_level;
  /**
   * RF output power state.
   */
  RfPower rf_power;
  /**
   * Delay between amplitude sweep steps.
   */
  uint64_t sweep_delay_ms;
} SignalGeneratorConfigAmpSweep;
/**
 * Signal generator CW configuration.
 *
 * Frequencies are represented in hertz.
 */
typedef struct SignalGeneratorConfigCw {
  /**
   * CW frequency.
   */
  uint64_t cw_hz;
  /**
   * Total number of configured steps.
   */
  uint32_t total_steps;
  /**
   * Frequency increment per step.
   */
  uint64_t step_freq_hz;
  /**
   * RF output attenuation setting.
   */
  Attenuation attenuation;
  /**
   * RF output power level.
   */
  PowerLevel power_level;
  /**
   * RF output power state.
   */
  RfPower rf_power;
} SignalGeneratorConfigCw;
/**
 * Signal generator frequency sweep configuration.
 *
 * Frequencies are represented in hertz. Durations are represented in
 * milliseconds.
 */
typedef struct SignalGeneratorConfigFreqSweep {
  /**
   * Start frequency.
   */
  uint64_t start_hz;
  /**
   * Total number of sweep steps.
   */
  uint32_t total_steps;
  /**
   * Frequency increment per step.
   */
  uint64_t step_hz;
  /**
   * RF output attenuation setting.
   */
  Attenuation attenuation;
  /**
   * RF output power level.
   */
  PowerLevel power_level;
  /**
   * RF output power state.
   */
  RfPower rf_power;
  /**
   * Delay between sweep steps.
   */
  uint64_t sweep_delay_ms;
} SignalGeneratorConfigFreqSweep;
/**
 * Frees screen data returned by an `rfe_*_screen_data` function.
 *
 * Passing `NULL` is allowed and has no effect.
 */
void rfe_screen_data_free(struct ScreenData *screen_data);
/**
 * Disables screen dump messages from the signal generator.
 */
enum Result rfe_signal_generator_disable_dump_screen(const struct SignalGenerator *rfe);
/**
 * Holds the current signal generator operation.
 */
enum Result rfe_signal_generator_hold(const struct SignalGenerator *rfe);
/**
 * Reboots the signal generator.
 *
 * The `rfe` pointer must not be used after a successful reboot unless the
 * device is reconnected.
 */
enum Result rfe_signal_generator_reboot(struct SignalGenerator *rfe);
/**
 * Powers off the signal generator.
 *
 * The `rfe` pointer must not be used after a successful power-off unless the
 * device is reconnected.
 */
enum Result rfe_signal_generator_power_off(struct SignalGenerator *rfe);
/**
 * Writes the most recent main signal generator configuration to `config`.
 *
 * Returns `RESULT_NO_DATA` if no matching configuration has been received.
 */
enum Result rfe_signal_generator_config(const struct SignalGenerator *rfe,
                                        struct SignalGeneratorConfig *config);
/**
 * Writes the most recent amplitude sweep configuration to `config`.
 *
 * Returns `RESULT_NO_DATA` if no matching configuration has been received.
 */
enum Result rfe_signal_generator_config_amp_sweep(const struct SignalGenerator *rfe,
                                                  struct SignalGeneratorConfigAmpSweep *config);
/**
 * Writes the most recent CW configuration to `config`.
 *
 * Returns `RESULT_NO_DATA` if no matching configuration has been received.
 */
enum Result rfe_signal_generator_config_cw(const struct SignalGenerator *rfe,
                                           struct SignalGeneratorConfigCw *config);
/**
 * Writes the most recent frequency sweep configuration to `config`.
 *
 * Returns `RESULT_NO_DATA` if no matching configuration has been received.
 */
enum Result rfe_signal_generator_config_freq_sweep(const struct SignalGenerator *rfe,
                                                   struct SignalGeneratorConfigFreqSweep *config);
/**
 * Returns the most recent LCD screen capture.
 *
 * On success, `screen_data` receives a heap-allocated `ScreenData` pointer
 * owned by the caller. Free it with `rfe_screen_data_free`.
 */
enum Result rfe_signal_generator_screen_data(const struct SignalGenerator *rfe,
                                             const struct ScreenData **screen_data);
/**
 * Waits for the next LCD screen capture.
 *
 * On success, `screen_data` receives a heap-allocated `ScreenData` pointer
 * owned by the caller. Free it with `rfe_screen_data_free`.
 */
enum Result rfe_signal_generator_wait_for_next_screen_data(const struct SignalGenerator *rfe,
                                                           const struct ScreenData **screen_data);
/**
 * Waits up to `timeout_secs` seconds for the next LCD screen capture.
 *
 * On success, `screen_data` receives a heap-allocated `ScreenData` pointer
 * owned by the caller. Free it with `rfe_screen_data_free`.
 */
enum Result rfe_signal_generator_wait_for_next_screen_data_with_timeout(const struct SignalGenerator *rfe,
                                                                        uint64_t timeout_secs,
                                                                        const struct ScreenData **screen_data);
/**
 * Writes the most recent temperature range to `temperature`.
 *
 * Returns `RESULT_NO_DATA` if the device has not reported a temperature range.
 */
enum Result rfe_signal_generator_temperature(const struct SignalGenerator *rfe,
                                             Temperature *temperature);
/**
 * Writes the main radio module model to `model`.
 *
 * Returns `RESULT_NO_DATA` if no main model has been reported.
 */
enum Result rfe_signal_generator_main_radio_model(const struct SignalGenerator *rfe,
                                                  SignalGeneratorModel *model);
/**
 * Writes the expansion radio module model to `model`.
 *
 * Returns `RESULT_NO_DATA` if no expansion model has been reported.
 */
enum Result rfe_signal_generator_expansion_radio_model(const struct SignalGenerator *rfe,
                                                       SignalGeneratorModel *model);
/**
 * Writes the currently active radio module model to `model`.
 */
enum Result rfe_signal_generator_active_radio_model(const struct SignalGenerator *rfe,
                                                    SignalGeneratorModel *model);
/**
 * Writes the currently inactive radio module model to `model`.
 *
 * Returns `RESULT_NO_DATA` if no inactive model exists.
 */
enum Result rfe_signal_generator_inactive_radio_model(const struct SignalGenerator *rfe,
                                                      SignalGeneratorModel *model);
/**
 * Starts amplitude sweep mode.
 *
 * `cw_hz` is the CW frequency in hertz and `step_delay_sec` is the delay
 * between amplitude sweep steps in seconds.
 */
enum Result rfe_signal_generator_start_amp_sweep(const struct SignalGenerator *rfe,
                                                 uint64_t cw_hz,
                                                 Attenuation start_attenuation,
                                                 PowerLevel start_power_level,
                                                 Attenuation stop_attenuation,
                                                 PowerLevel stop_power_level,
                                                 uint8_t step_delay_sec);
/**
 * Starts amplitude sweep mode using the expansion module.
 *
 * `cw_hz` is the CW frequency in hertz and `step_delay_sec` is the delay
 * between amplitude sweep steps in seconds.
 */
enum Result rfe_signal_generator_start_amp_sweep_exp(const struct SignalGenerator *rfe,
                                                     uint64_t cw_hz,
                                                     double start_power_dbm,
                                                     double step_power_db,
                                                     double stop_power_dbm,
                                                     uint8_t step_delay_sec);
/**
 * Starts CW mode.
 *
 * `cw_hz` is the CW frequency in hertz.
 */
enum Result rfe_signal_generator_start_cw(const struct SignalGenerator *rfe,
                                          uint64_t cw_hz,
                                          Attenuation attenuation,
                                          PowerLevel power_level);
/**
 * Starts CW mode using the expansion module.
 *
 * `cw_hz` is the CW frequency in hertz.
 */
enum Result rfe_signal_generator_start_cw_exp(const struct SignalGenerator *rfe,
                                              uint64_t cw_hz,
                                              double power_dbm);
/**
 * Starts frequency sweep mode.
 *
 * Frequencies are represented in hertz and `step_delay_sec` is the delay
 * between frequency sweep steps in seconds.
 */
enum Result rfe_signal_generator_start_freq_sweep(const struct SignalGenerator *rfe,
                                                  uint64_t start_hz,
                                                  Attenuation attenuation,
                                                  PowerLevel power_level,
                                                  uint16_t sweep_steps,
                                                  uint64_t step_hz,
                                                  uint8_t step_delay_sec);
/**
 * Starts frequency sweep mode using the expansion module.
 *
 * Frequencies are represented in hertz and `step_delay_sec` is the delay
 * between frequency sweep steps in seconds.
 */
enum Result rfe_signal_generator_start_freq_sweep_exp(const struct SignalGenerator *rfe,
                                                      uint64_t start_hz,
                                                      double power_dbm,
                                                      uint16_t sweep_steps,
                                                      uint64_t step_hz,
                                                      uint8_t step_delay_sec);
/**
 * Starts tracking mode.
 *
 * `start_hz` and `step_hz` are represented in hertz.
 */
enum Result rfe_signal_generator_start_tracking(const struct SignalGenerator *rfe,
                                                uint64_t start_hz,
                                                Attenuation attenuation,
                                                PowerLevel power_level,
                                                uint16_t sweep_steps,
                                                uint64_t step_hz);