ffi/include/NativeMethods.g.cs


        /// <summary>
        ///  Disables screen dump messages from the signal generator.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_signal_generator_disable_dump_screen", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern Result rfe_signal_generator_disable_dump_screen(SignalGenerator* rfe);

        /// <summary>
        ///  Holds the current signal generator operation.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_signal_generator_hold", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern Result rfe_signal_generator_hold(SignalGenerator* rfe);

        /// <summary>
        ///  Reboots the signal generator.
        ///
        ///  The `rfe` pointer must not be used after a successful reboot unless the
        ///  device is reconnected.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_signal_generator_reboot", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern Result rfe_signal_generator_reboot(SignalGenerator* rfe);

        /// <summary>
        ///  Powers off the signal generator.
        ///
        ///  The `rfe` pointer must not be used after a successful power-off unless the
        ///  device is reconnected.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_signal_generator_power_off", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern Result rfe_signal_generator_power_off(SignalGenerator* rfe);

        /// <summary>
        ///  Writes the most recent main signal generator configuration to `config`.
        ///
        ///  Returns `RESULT_NO_DATA` if no matching configuration has been received.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_signal_generator_config", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern Result rfe_signal_generator_config(SignalGenerator* rfe, SignalGeneratorConfig* config);

        /// <summary>
        ///  Writes the most recent amplitude sweep configuration to `config`.
        ///
        ///  Returns `RESULT_NO_DATA` if no matching configuration has been received.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_signal_generator_config_amp_sweep", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern Result rfe_signal_generator_config_amp_sweep(SignalGenerator* rfe, SignalGeneratorConfigAmpSweep* config);

        /// <summary>
        ///  Writes the most recent CW configuration to `config`.
        ///
        ///  Returns `RESULT_NO_DATA` if no matching configuration has been received.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_signal_generator_config_cw", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern Result rfe_signal_generator_config_cw(SignalGenerator* rfe, SignalGeneratorConfigCw* config);

        /// <summary>
        ///  Writes the most recent frequency sweep configuration to `config`.
        ///
        ///  Returns `RESULT_NO_DATA` if no matching configuration has been received.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_signal_generator_config_freq_sweep", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern Result rfe_signal_generator_config_freq_sweep(SignalGenerator* rfe, SignalGeneratorConfigFreqSweep* config);

        /// <summary>
        ///  Returns the most recent LCD screen capture.
        ///
        ///  On success, `screen_data` receives a heap-allocated `ScreenData` pointer
        ///  owned by the caller. Free it with `rfe_screen_data_free`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_signal_generator_screen_data", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern Result rfe_signal_generator_screen_data(SignalGenerator* rfe, ScreenData** screen_data);

        /// <summary>
        ///  Waits for the next LCD screen capture.
        ///
        ///  On success, `screen_data` receives a heap-allocated `ScreenData` pointer
        ///  owned by the caller. Free it with `rfe_screen_data_free`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_signal_generator_wait_for_next_screen_data", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern Result rfe_signal_generator_wait_for_next_screen_data(SignalGenerator* rfe, ScreenData** screen_data);

        /// <summary>
        ///  Waits up to `timeout_secs` seconds for the next LCD screen capture.
        ///
        ///  On success, `screen_data` receives a heap-allocated `ScreenData` pointer
        ///  owned by the caller. Free it with `rfe_screen_data_free`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_signal_generator_wait_for_next_screen_data_with_timeout", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern Result rfe_signal_generator_wait_for_next_screen_data_with_timeout(SignalGenerator* rfe, ulong timeout_secs, ScreenData** screen_data);

        /// <summary>
        ///  Writes the most recent temperature range to `temperature`.
        ///
        ///  Returns `RESULT_NO_DATA` if the device has not reported a temperature range.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_signal_generator_temperature", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern Result rfe_signal_generator_temperature(SignalGenerator* rfe, Temperature* temperature);

        /// <summary>
        ///  Writes the main radio module model to `model`.
        ///
        ///  Returns `RESULT_NO_DATA` if no main model has been reported.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_signal_generator_main_radio_model", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern Result rfe_signal_generator_main_radio_model(SignalGenerator* rfe, SignalGeneratorModel* model);

        /// <summary>
        ///  Writes the expansion radio module model to `model`.
        ///
        ///  Returns `RESULT_NO_DATA` if no expansion model has been reported.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_signal_generator_expansion_radio_model", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern Result rfe_signal_generator_expansion_radio_model(SignalGenerator* rfe, SignalGeneratorModel* model);

        /// <summary>
        ///  Writes the currently active radio module model to `model`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_signal_generator_active_radio_model", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern Result rfe_signal_generator_active_radio_model(SignalGenerator* rfe, SignalGeneratorModel* model);

        /// <summary>
        ///  Writes the currently inactive radio module model to `model`.
        ///
        ///  Returns `RESULT_NO_DATA` if no inactive model exists.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_signal_generator_inactive_radio_model", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern Result rfe_signal_generator_inactive_radio_model(SignalGenerator* rfe, SignalGeneratorModel* model);

        /// <summary>
        ///  Starts amplitude sweep mode.
        ///
        ///  `cw_hz` is the CW frequency in hertz and `step_delay_sec` is the delay
        ///  between amplitude sweep steps in seconds.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_signal_generator_start_amp_sweep", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern Result rfe_signal_generator_start_amp_sweep(SignalGenerator* rfe, ulong cw_hz, Attenuation start_attenuation, PowerLevel start_power_level, Attenuation stop_attenuation, PowerLevel stop_power_level, byte step_delay_sec);

        /// <summary>
        ///  Starts amplitude sweep mode using the expansion module.
        ///
        ///  `cw_hz` is the CW frequency in hertz and `step_delay_sec` is the delay
        ///  between amplitude sweep steps in seconds.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_signal_generator_start_amp_sweep_exp", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern Result rfe_signal_generator_start_amp_sweep_exp(SignalGenerator* rfe, ulong cw_hz, double start_power_dbm, double step_power_db, double stop_power_dbm, byte step_delay_sec);

        /// <summary>
        ///  Starts CW mode.
        ///
        ///  `cw_hz` is the CW frequency in hertz.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_signal_generator_start_cw", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern Result rfe_signal_generator_start_cw(SignalGenerator* rfe, ulong cw_hz, Attenuation attenuation, PowerLevel power_level);

        /// <summary>
        ///  Starts CW mode using the expansion module.
        ///
        ///  `cw_hz` is the CW frequency in hertz.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_signal_generator_start_cw_exp", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern Result rfe_signal_generator_start_cw_exp(SignalGenerator* rfe, ulong cw_hz, double power_dbm);

        /// <summary>
        ///  Starts frequency sweep mode.
        ///
        ///  Frequencies are represented in hertz and `step_delay_sec` is the delay
        ///  between frequency sweep steps in seconds.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_signal_generator_start_freq_sweep", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern Result rfe_signal_generator_start_freq_sweep(SignalGenerator* rfe, ulong start_hz, Attenuation attenuation, PowerLevel power_level, ushort sweep_steps, ulong step_hz, byte step_delay_sec);

        /// <summary>
        ///  Starts frequency sweep mode using the expansion module.
        ///
        ///  Frequencies are represented in hertz and `step_delay_sec` is the delay
        ///  between frequency sweep steps in seconds.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_signal_generator_start_freq_sweep_exp", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern Result rfe_signal_generator_start_freq_sweep_exp(SignalGenerator* rfe, ulong start_hz, double power_dbm, ushort sweep_steps, ulong step_hz, byte step_delay_sec);

        /// <summary>
        ///  Starts tracking mode.
        ///
        ///  `start_hz` and `step_hz` are represented in hertz.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_signal_generator_start_tracking", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern Result rfe_signal_generator_start_tracking(SignalGenerator* rfe, ulong start_hz, Attenuation attenuation, PowerLevel power_level, ushort sweep_steps, ulong step_hz);
